# test_bevy_game

./: Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs  states.rs
src/core/: mod.rs  plugin.rs  states.rs
src/game/: build_bevy_app.rs  mod.rs
src/game/core/: global_resources.rs  mod.rs  plugin.rs  quit_game.rs  states.rs
src/game/debug_menu/: mod.rs  plugin.rs
src/game/egui_setup/: mod.rs  plugin.rs
src/game/gui/: constants.rs  fonts.rs  gui_button.rs  gui_div.rs  gui_floating_panel.rs  gui_node.rs  gui_parent.rs  gui_root_template.rs  gui_screen_div.rs  gui_text.rs  mod.rs  plugin.rs
src/game/main_menu_state/: main_menu_gui.rs  mod.rs  plugin.rs  tags.rs
src/game/main_menu_state/main_menu_gui/: mod.rs  plugin.rs
src/game/menu_state/: plugin.rs
src/game/playing_state/: mod.rs  pause_gui.rs  plugin.rs  sets.rs  tags.rs
src/game/playing_state/pause_menu/: mod.rs  plugin.rs
src/game/playing_state/player/: mod.rs  plugin.rs  resources.rs  tags.rs
src/game/ui/: mod.rs  plugin.rs  tags.rs
src/game/util/: mod.rs
src/gui/: constants.rs  div.rs  fonts.rs  gui_div.rs  gui_screen_div.rs  gui_text.rs  menu_frame.rs  mod.rs  screen_div.rs
src/menu_state/: mod.rs  plugin.rs  tags.rs
src/playing_state/: plugin.rs  sets.rs
src/playing_state/world/: mod.rs
src/plugins/: camera.rs  mod.rs  player.rs  world.rs
src/state_menu/: mod.rs  plugin.rs  tags.rs
src/state_playing/: mod.rs  plugin.rs  states.rs  tags.rs
src/state_playing/player/: plugin.rs
src/state_playing/world/: plugin.rs
src/ui/: plugin.rs
src/world/: plugin.rs
(+1 files in other folders)
