[package]
name = "test_bevy_game"
version = "0.1.0"
edition = "2024"

# Optimization

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking"] } # TODO: remove dynamic_linking for production
bevy_ecs = "0.18.0"
bevy_egui = "0.39.1"
